<resources>
    <string name="app_name">Countdown</string>
    <string name="activity_label_number_game">Number Game Oyunu</string>

    <string name="welcome">Bir Kelime Bir İşlem\nOyununa Hoşgeldiniz</string>
    <string name="hint_username">Lütfen, kullanıcı adınızı girin.</string>
    <string name="next">İleri</string>
    <string name="game_mode">Hangi oyunu oynamak istediğinizi seçin.</string>
    <string name="word_game">Bir Kelime</string>
    <string name="number_game">Bir İşlem</string>

    <string name="how_many_large_num">Kaç adet büyük sayı istiyorsunuz ?</string>
    <string name="get_cards">0, lütfen</string>
    <string name="please">, lütfen</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="obelus">/</string>
    <string name="equals">=</string>

    <string name="game_over">Oyunu bitir</string>

    <string name="action_people">İnsanlar</string>
    <string name="action_settings">Ayarlar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
</resources>
