<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bilalekremharmansa.countdown.activities.NumberGameActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtTargetNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_below="@id/toolbar"
        android:textSize="@dimen/text_title" />

    <Button
        android:id="@+id/btnGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtTargetNumber"
        android:layout_alignParentEnd="true"
        android:onClick="onClickGameOver"
        android:layout_below="@id/toolbar"
        android:text="@string/game_over" />


    <LinearLayout
        android:id="@+id/linearLayoutNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTargetNumber"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutNumbers"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOperatorPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickOperator"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btnOperatorMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickOperator"
            android:text="@string/minus" />

        <Button
            android:id="@+id/btnOperatorTimes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickOperator"
            android:text="@string/times" />

        <Button
            android:id="@+id/btnOperatorObelus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickOperator"
            android:text="@string/obelus" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_expression"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayoutOperator"
        android:layout_marginTop="18dp">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
