<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bilalekremharmansa.countdown.activities.WelcomeActivity">

    <LinearLayout
        android:id="@+id/after_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.bilalekremharmansa.countdown.activities.WelcomeActivity">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_below="@id/toolbar"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"

                />

            <TextView
                android:id="@+id/txtGameMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_mode"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:gravity="center"

                android:layout_centerHorizontal="true"
                android:layout_below="@id/txtWelcome"
                android:layout_marginBottom="20dp"


                />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/next" />

        </RelativeLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation"
        app:headerLayout="@layout/navigation_header" />


</android.support.v4.widget.DrawerLayout>

